--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@react-three/drei": "latest",
-    "@react-three/fiber": "latest",
+    "@react-three/drei": "^9.109.5",
+    "@react-three/fiber": "^8.16.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@vercel/analytics": "latest",
@@ -67,7 +67,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "latest",
+    "three": "^0.154.0",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
