--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,7 @@ redis==5.0.1
 python-dotenv==1.0.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
+scikit-learn==1.3.2
+pandas==2.1.4
+numpy==1.24.3
+joblib==1.3.2
