--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -34,7 +34,7 @@ prepend_sys_path = .
 # sourceless = false
 
 # version number format
-version_num_format = %04d
+# version_num_format = %04d
 
 # version path separator; As mentioned above, this is the character used to split
 # version_num_format into a version number
